# SYNAPTEX

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  index.html  pyproject.toml
docs/: RELEASE_CHECKLIST.md
examples/: agentic_memory_demo.py
synaptex/: __init__.py  amem_graph.py  core.py  dopamine.py  forgetting_gate.py  memgpt_pager.py  multi_agent.py  multimodal.py  polyglot_compressor.py  reasoning_bank.py  swiftmem.py  types.py
tests/: test_engine.py  test_public_api.py  test_retrieval_and_pager.py  test_subsystems.py
