[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "synaptex"
version = "0.1.0"
description = "Experimental agent memory library with tri-layer compression, retrieval, and context paging."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Liu S", email = "cosmos@synaptex.dev"},
]
keywords = [
    "memory",
    "attention",
    "llm",
    "agent",
    "token-compression",
    "zettelkasten",
    "context-paging",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/liusulldel/SYNAPTEX"
Repository = "https://github.com/liusulldel/SYNAPTEX"
Issues = "https://github.com/liusulldel/SYNAPTEX/issues"
